force-app/main/default/objects/Member_Pipeline__c/Member_Pipeline__c.object-meta.xml
<CustomObject>
    <label>Member Pipeline</label>
    <nameField>
        <displayFormat>MP-{00000}</displayFormat>
        <label>Member Pipeline Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Member Pipelines</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>