force-app/main/default/objects/Member_Pipeline__c/fields/Archived_SYSTEM__c.field-meta.xml
<CustomField>
    <fullName>Archived_SYSTEM__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Archived_SYSTEM</label>
    <type>Checkbox</type>
</CustomField>