force-app/main/default/objects/Member_Pipeline__c/fields/Current_Status__c.field-meta.xml
<CustomField>
    <fullName>Current_Status__c</fullName>
    <formula>if( Archived_SYSTEM__c =FALSE,TRUE,FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Current Status</label>
    <type>Checkbox</type>
</CustomField>