force-app/main/default/objects/Member_Pipeline__c/fields/Date_Agreement_was_Sent_Out__c.field-meta.xml
<CustomField>
    <fullName>Date_Agreement_was_Sent_Out__c</fullName>
    <label>Date Agreement was Sent Out</label>
    <type>Date</type>
</CustomField>