force-app/main/default/objects/Member_Pipeline__c/fields/Date_of_Status_Change__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Status_Change__c</fullName>
    <label>Date of Status Change</label>
    <type>Date</type>
</CustomField>