force-app/main/default/objects/Member_Pipeline__c/fields/Date_Put_On_Hold__c.field-meta.xml
<CustomField>
    <fullName>Date_Put_On_Hold__c</fullName>
    <label>Date Put On Hold</label>
    <type>Date</type>
</CustomField>