force-app/main/default/objects/Member_Pipeline__c/fields/Followup_Assigned_to__c.field-meta.xml
<CustomField>
    <fullName>Followup_Assigned_to__c</fullName>
    <label>Followup Assigned to</label>
    <length>150</length>
    <type>Text</type>
</CustomField>