force-app/main/default/objects/Member_Pipeline__c/fields/Invoice_Details__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Details__c</fullName>
    <label>Invoice Details</label>
    <type>TextArea</type>
</CustomField>