force-app/main/default/objects/Member_Pipeline__c/fields/Last_Updated__c.field-meta.xml
<CustomField>
    <fullName>Last_Updated__c</fullName>
    <formula>datevalue(LastModifiedDate )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Last Updated</label>
    <type>Date</type>
</CustomField>