force-app/main/default/objects/Member_Pipeline__c/fields/Last_Updated_by__c.field-meta.xml
<CustomField>
    <fullName>Last_Updated_by__c</fullName>
    <formula>LastModifiedBy.FirstName &amp;&quot; &quot;&amp;LastModifiedBy.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Last Updated by</label>
    <type>Text</type>
</CustomField>