force-app/main/default/objects/Member_Pipeline__c/fields/Membership_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Membership_End_Date__c</fullName>
    <label>Membership End Date</label>
    <type>Date</type>
</CustomField>