force-app/main/default/objects/Member_Pipeline__c/fields/Notified_by__c.field-meta.xml
<CustomField>
    <fullName>Notified_by__c</fullName>
    <label>Notified by</label>
    <length>150</length>
    <type>Text</type>
</CustomField>