force-app/main/default/objects/Member_Pipeline__c/fields/Pricing__c.field-meta.xml
<CustomField>
    <fullName>Pricing__c</fullName>
    <inlineHelpText>First year fee/ongoing annual fee (plus?)</inlineHelpText>
    <label>Pricing</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>