force-app/main/default/objects/Member_Pipeline__c/fields/Prospect_Notes__c.field-meta.xml
<CustomField>
    <fullName>Prospect_Notes__c</fullName>
    <label>Prospect Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>