force-app/main/default/objects/Member_Pipeline__c/fields/Reason_for_Ending_Membership__c.field-meta.xml
<CustomField>
    <fullName>Reason_for_Ending_Membership__c</fullName>
    <label>Reason for Ending Membership</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>