force-app/main/default/objects/Member_Pipeline__c/fields/Reason_for_Stopping__c.field-meta.xml
<CustomField>
    <fullName>Reason_for_Stopping__c</fullName>
    <label>Reason for Stopping</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>