force-app/main/default/objects/Member_Pipeline__c/fields/Rounds_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Rounds_Start_Date__c</fullName>
    <label>Rounds Start Date</label>
    <type>Date</type>
</CustomField>