force-app/main/default/objects/Member_Pipeline__c/fields/Signed_Agreement_Received_Date__c.field-meta.xml
<CustomField>
    <fullName>Signed_Agreement_Received_Date__c</fullName>
    <label>Signed Agreement Received Date</label>
    <type>Date</type>
</CustomField>