force-app/main/default/objects/Member_Pipeline__c/fields/Stopped_Date__c.field-meta.xml
<CustomField>
    <fullName>Stopped_Date__c</fullName>
    <label>Stopped Date</label>
    <type>Date</type>
</CustomField>