force-app/main/default/objects/Member_Pipeline__c/recordTypes/Active_Member.recordType-meta.xml
<RecordType>
    <fullName>Active_Member</fullName>
    <active>true</active>
    <label>Active Member</label>
</RecordType>