force-app/main/default/objects/Member_Pipeline__c/recordTypes/Approached_Insufficient_Interest.recordType-meta.xml
<RecordType>
    <fullName>Approached_Insufficient_Interest</fullName>
    <active>true</active>
    <label>Approached - Insufficient Interest</label>
</RecordType>