force-app/main/default/objects/Member_Pipeline__c/recordTypes/Former_Member.recordType-meta.xml
<RecordType>
    <fullName>Former_Member</fullName>
    <active>true</active>
    <label>Former Member</label>
</RecordType>