force-app/main/default/objects/Member_Pipeline__c/recordTypes/Former_Rounds_Site.recordType-meta.xml
<RecordType>
    <fullName>Former_Rounds_Site</fullName>
    <active>true</active>
    <label>Former Rounds Site</label>
</RecordType>