force-app/main/default/objects/Member_Pipeline__c/recordTypes/Inquired.recordType-meta.xml
<RecordType>
    <fullName>Inquired</fullName>
    <active>true</active>
    <label>Inquired</label>
</RecordType>